[package]
name = "kouran"
version = "0.1.2"
edition = "2021"
authors = ["Jain Ramchurn"]
description = "View Power Outages in Mauritius"
license = "MIT"
repository = "https://github.com/k3ii/kouran"
homepage = "https://github.com/k3ii/kouran"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
rust-version = "1.74.1"


[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.17"
comfy-table = { version = "7.1.1", features = ["ansi-str"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
term_size = "0.3.2"
tokio = { version = "1.40.0", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "k3ii/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
